log
Fri, Apr 18, 2025 10:09:06 PM: 
 hashmap.c | 67 +++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 57 insertions(+), 10 deletions(-)
 tests:  10|4
total_score: 20/70
eeef3b7
Fri, Apr 18, 2025 10:09:41 PM: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  10|4
total_score: 20/70
c74b357
Fri, Apr 18, 2025 10:10:43 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|3
total_score: 30/70
9e8bd2c
Fri, Apr 18, 2025 10:12:11 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|3
total_score: 30/70
48c547e
Fri, Apr 18, 2025 10:12:55 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  15|2
total_score: 50/70
c9da480
Fri, Apr 18, 2025 10:14:39 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|2
total_score: 50/70
e293c56
Fri, Apr 18, 2025 10:15:47 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
bc21813
Fri, Apr 18, 2025 10:26:46 PM: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:111:28: error: 'pos' undeclared (first use in this function)
         if (map -> buckets[pos] != NULL && map -> buckets[pos] -> key != NULL) {
                            ^~~
hashmap.c:111:28: note: each undeclared identifier is reported only once for each function it appears in
5a9ab85
Fri, Apr 18, 2025 10:26:57 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  13|2
total_score: 50/70
9fec2a2
Fri, Apr 18, 2025 10:27:27 PM: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  15|2
total_score: 50/70
242be4c
